force-app/main/default/objects/Billing_expert_Mapping__c/Billing_expert_Mapping__c.object-meta.xml
<CustomObject>
    <label>Billing expert Mapping</label>
    <nameField>
        <displayFormat>BE-{00000}</displayFormat>
        <label>Billing expert  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing expert Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>