force-app/main/default/objects/Billing_expert_Mapping__c/fields/Billing_Expert__c.field-meta.xml
<CustomField>
    <fullName>Billing_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_expert_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>