force-app/main/default/objects/Billing_expert_Mapping__c/fields/Change_in_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Mapping__c</fullName>
    <defaultValue>true</defaultValue>
    <description>MIS-2458 - when there is a change in the billing expert field this checkbox will be true and the batch process will update all of the account that match the mapping</description>
    <label>Change in Mapping</label>
    <type>Checkbox</type>
</CustomField>