force-app/main/default/objects/Billing_expert_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Owner_Division__c</columns>
    <columns>Billing_Expert__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>